--- a/Mods/Mod_AutoUtils/Mod_AutoUtils.csproj
+++ b/Mods/Mod_AutoUtils/Mod_AutoUtils.csproj
@@ -25,7 +25,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>D:\Program Files %28x86%29\Steam\steamapps\common\AmazingCultivationSimulator\CSharpMods\Mod_AutoUtils\</OutputPath>
+    <OutputPath>D:\Program Files %28x86%29\Steam\steamapps\common\Dragon Cliff\CSharpMods\Mod_AutoUtils\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
